# tasham

./: .dockerignore  .gitignore  Cargo.toml  README.md
config/: default.toml  development.toml  local.toml  production.toml
dockerfiles/development/: dev.db.fly.toml
infrastructure/local/: docker-compose.yml
scripts/: deploy.sh  local_db.sh
src/: application.rs  main.rs  pages.rs  result.rs  settings.rs
src/pages/: hello.rs  index.rs
src/settings/: database_settings.rs
templates/: base.html  hello.html
templates/components/: accordion.html  date_picker.html  testimonials_grid.html
