[package]
name = "tasham"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = "1.1.1"
axum = "0.7.1"
tower-http = { version = "0.5.0", features = ["cors"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
maud = { version = "0.26.0", features = ["axum"] }

