[package]
name = "ushaaa"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
config = { version = "0.13.4", features = ["toml"] }
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = "1.1.1"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-livereload = "0.9.2"

[profile.release]
lto = false
opt-level = "z"
